# unsee

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: release.yml
crates/unsee-cli/: Cargo.toml
crates/unsee-cli/src/: cmd_ignore.rs  cmd_init.rs  cmd_install.rs  cmd_protect.rs  cmd_status.rs  cmd_uninstall.rs  main.rs
crates/unsee-cli/tests/: e2e.rs
crates/unsee-core/: Cargo.toml
crates/unsee-core/src/: credpaths.rs  env_sanitize.rs  ignorelist.rs  lib.rs  mapping.rs  parser.rs
crates/unsee-guard/: Cargo.toml  build.rs  interpose.c
crates/unsee-guard/src/: lib.rs
crates/unsee-guard/src/sandbox/: linux.rs  macos.rs  mod.rs  seccomp.rs
crates/unsee-pty/: Cargo.toml  build.rs
crates/unsee-pty/src/: lib.rs
crates/unsee-redact/: Cargo.toml
crates/unsee-redact/src/: lib.rs
fixtures/: sample.env  sample.env.local  sample.shield.ignore
