[workspace]
members = [
    "crates/unsee-core",
    "crates/unsee-redact",
    "crates/unsee-pty",
    "crates/unsee-guard",
    "crates/unsee-cli",
]
resolver = "2"

[workspace.dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = { version = "1", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
tempfile = "3"
regex-lite = "0.1"
cc = "1"
