[package]
name = "unsee-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "unsee"
path = "src/main.rs"

[dependencies]
unsee-core = { path = "../unsee-core" }
unsee-redact = { path = "../unsee-redact" }
unsee-pty = { path = "../unsee-pty" }
unsee-guard = { path = "../unsee-guard" }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
libc = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
