[package]
name = "unsee-core"
version = "0.0.1"
edition = "2021"

[dependencies]
dotenvy = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
regex-lite = { workspace = true }
