[package]
name = "unsee-guard"
version = "0.0.1"
edition = "2021"

[dependencies]
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
cc = { workspace = true }
